# stmux

./: .gitignore  .luarc.json  Cargo.toml  README.md  TODO.md  build.sh  install.sh  listen.sh  release.sh  test.sh
config/: nvim-config.lua  status.toml
scripts/: fzf-test.sh
src/: args.rs  bookmarks.rs  command_builder.rs  config.rs  main.rs  model.rs  recent.rs  recent_session_file.rs  session.rs  session_name_file.rs  sessions.rs  status.rs  status_config.rs  tmux.rs  utils.rs  window.rs  workflow.rs
