[package]
name = "stmux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
clap = { version = "4.5.18", features = ["derive"] }
dirs-next = "2.0.0"
