[package]
name = "stmux"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
clap = { version = "4.5.18", features = ["derive"] }
dirs-next = "2.0.0"
mockall = "0.13.0"
nix = { version = "0.29.0", features = ["fs"] }
